--- a/readme.adoc
+++ b/readme.adoc
@@ -15,12 +15,12 @@ Some examples are available in the examples folders
 
     git clone git clone git://git.code.sf.net/p/moise-exceptions/code moise-exceptions-code
     cd moise-exceptions-code
-    gradle build
+    gradlew build
 
 == Running the examples (requires Gradle)
 
     From the root folder of the example execute:
-    gradle run
+    gradlew run
 
 ---
 Developed by Matteo Baldoni, Cristina Baroglio, Roberto Micalizio, Stefano Tedeschi.
